using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Boolean.CSharp.Main
{
    public class SavingsAccount : BankAccount
    {
        public SavingsAccount(string accountNumber) : base(accountNumber, AccountType.Savings) { }
    }
}
